<resources>
    <string name="app_name">Bee Safe</string>
    <string name="beeText">Bee</string>
    <string name="safeText">Safe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Isi dari App -->
    <string name="akun">Akun</string>
    <string name="lapor">Lapor</string>
    <string name="email">Email</string>
    <!--Example-->
    <string name="emailExample">BeeSafe@example.com</string>
    <string name="passwordExample">password</string>
    <string name="numberExample">08xxxxxxxx</string>
    <!--Untuk Login-->
    <string name="selamat_datang">Selamat Datang</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="goToRegister">Tidak punya akun?</string>
    <string name="daftarIntent"><u>Daftar</u></string>
    <string name="masuk">Masuk</string>
    <!--Untuk Daftar-->
    <string name="Daftar">Daftar</string>
    <string name="masukIntent"><u>Masuk</u></string>
    <string name="gotoLogin">Sudah punya akun?</string>
    <string name="syaratketentuan">Dengan menekal tombol daftar, anda menyetujui <u>Syarat dan Ketentuan</u></string>
    <string name="nomorHp">No. Handphone</string>
    <string name="title_activity_maps">Map</string>
    <!--Untuk Lapor-->
    <string name="Tanggal">Tanggal</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_text">Ini adalah deskripsi</string>
    <string name="lokasi">Lokasi</string>
    <string name="lokasi_example"><i>Contoh : Jl. Mawar Merah no. 50</i></string>
    <string name="user">User</string>
    <!--OnBoard-->
    <string name="onBoard">Pergi dengan aman menggunakan peta kami. Peta akan selalu diperbaharui
dengan laporan paling baru</string>
    <string name="onBoard2">Satu tangan dapat membantu banyak orang.
Dengan membuat laporan, kamu bisa
mencegah orang lain mengalami kejadian
buruk yang sama.</string>
    <string name="onBoard3">Satu tangan dapat membantu banyak orang.
Dengan membuat laporan, kamu bisa
mencegah orang lain mengalami kejadian
buruk yang sama.</string>
</resources>