<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.beesafe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lapor"
        android:name="com.example.beesafe.ui.lapor.LaporFragment"
        android:label="@string/lapor"
        tools:layout="@layout/fragment_lapor" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.beesafe.ui.akun.AkunFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_akun" />
</navigation>