<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login"
        android:textColor="@color/dark_orange"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/email"
        android:textColor="@color/dark_orange"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text"
        android:elevation="12dp"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_regular"
        android:textSize="18sp"
        android:autofillHints="@string/emailExample"
        android:hint="@string/emailExample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_login" />

    <TextView
        android:id="@+id/txt_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/password"
        android:textColor="@color/dark_orange"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text"
        android:elevation="12dp"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:fontFamily="@font/lato_regular"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/edit_text"
        android:text="@string/login"
        android:backgroundTint="@color/dark_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <LinearLayout
        android:id="@+id/goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textSize="18sp"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/goToRegister"
            android:textColor="@color/dark_orange" />

        <TextView
            android:id="@+id/txt_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftarIntent"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/dark_orange"
            android:onClick="onClick"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="auto"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>